assets/css/style.css
html {
    font-size: 62.5%;
    scroll-behavior: smooth;
}

body {
    font-family: "Open Sans", sans-serif;
    background-color: #fafafa;
    font-size: 2rem;
}

h1 {
    font-size: 7rem;
}

h2 {
    font-size: 5rem;
}

h3 {
    font-size: 4rem;
}

.container-height {
    height: 100vh;
}



/* Welcome */



/* input */




/* question */

#question {
    margin-top: 70px;
}


#question-text {
    font-size: 5rem;
    padding: 50px;
}

.grid {
    padding: 50px;
}


/* Buttons */


.button {
    background-color: #FF7F11;
    border-radius: 5px;
    border: 1px solid #FF8011C5;
    padding: 30px 50px;
    font-size: 2.3rem;
    color: #000;
}


.button:hover {
    background-color: none;
    box-shadow: 5px 10px 18px #252525;
}

.button:focus {
    outline: none;
}

.button-correct {
    background-color: #2fbf71;
    border-color: #2fbf71;
}

.button-wrong {
    background-color: #EF2D56;
    border-color: #EF2D56;
}


/* Hide */


.hide {
    display: none;
}

/* @Media queries*/


@media only screen and (max-width: 766px) {
    h1 {
        font-size: 4.5rem;
    }

    h2 {
        font-size: 4rem;
    }

    #question {
        margin-top: 20px;
    }

    #question-text {
        font-size: 4rem;
        padding: 10px;
    }

    .grid {
        padding: 7px;
    }

    .button {
        font-size: 2rem;
    }

}

@media only screen and (max-width: 1366px) {

    #question {
        padding-top: 135px;
    }

    .grid {
        padding: 45px;
    }    

    .button {
        font-size: 3rem;
    }
}

